crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__no_fmt_on.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def test():
    # fmt: off
    not   formatted

    if unformatted +  a:
        pass

# Gets formatted again
a   + b
```

## Output
```python
def test():
    # fmt: off
    not   formatted

    if unformatted +  a:
        pass


# Gets formatted again
a + b
```
