crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__simple.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# Gets formatted
a +   b

# fmt: off
a + [1, 2, 3, 4, 5  ]
# fmt: on

# Gets formatted again
a +  b
```

## Output
```python
# Gets formatted
a + b

# fmt: off
a + [1, 2, 3, 4, 5  ]
# fmt: on

# Gets formatted again
a + b
```
