crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__trailing_newline.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/fmt_on_off/trailing_newline.py
---
## Input
```python
# Test case 1: File ends without newline in fmt: off region - should NOT add newline
# fmt: off
print("hello")

# Test case 2: File ends without newline but NOT in fmt: off region - should add newline
print("world")

# Test case 3: fmt: off followed by fmt: on - should add newline
# fmt: off
print("suppressed")
# fmt: on
print("formatted")```

## Output
```python
# Test case 1: File ends without newline in fmt: off region - should NOT add newline
# fmt: off
print("hello")

# Test case 2: File ends without newline but NOT in fmt: off region - should add newline
print("world")

# Test case 3: fmt: off followed by fmt: on - should add newline
# fmt: off
print("suppressed")
# fmt: on
print("formatted")
```
